```mermaid
erDiagram
  COURSE {
    ObjectId _id PK
    string title
    string instructor
    string duration
    string price
    string language
    string type
  }
  EMPLOYER {
    ObjectId _id PK
    string userId
    string name
    string companySize
    string industry
    string websiteLink
    string type
  }
  ENROLLMENT {
    ObjectId _id PK
    string learner
    string course
    string enrollmentDate
    string status
    string progress
    string completionDate
  }
  JOB {
    ObjectId _id PK
    string jobTitle
    string department
    string location
    string employmentType
    string salary
    string max
  }
  MESSAGE {
    ObjectId _id PK
    string user
    string role
    string joinedAt
    string conversationType
    string relatedEntity
    string entityId
  }
  NOTIFICATION {
    ObjectId _id PK
    string recipient
    string title
    string message
    string type
    string relatedEntity
    string entityId
  }
  SUBSCRIPTION {
    ObjectId _id PK
    string userId
    string planId
    string status
    string billing
    string endDate
    string autoRenew
  }
  SUBSCRIPTIONPLAN {
    ObjectId _id PK
    string name
    string displayName
    string description
    string price
    string currency
    string billingCycle
  }
  TRAININGINSTITUTE {
    ObjectId _id PK
    string userId
    string about
    string established
    string location
    string city
    string country
  }
  USER {
    ObjectId _id PK
    string fullName
    string email
    string password
    string phone
    string role
    string onboardingStage
  }
  USERPREFERENCES {
    ObjectId _id PK
    string userId
    string publicProfile
    string openToWork
    string showContactInfo
    string showCourseProgress
    string courseRecommendations
  }
  INDEX_JS {
    ObjectId _id PK
  }
  CERTIFICATION {
    ObjectId _id PK
    string name
    string issuedBy
    string issueDate
    string certificateFile
    string extracted
    string type
  }
  EXPERIENCE {
    ObjectId _id PK
    string title
    string company
    string startDate
    string endDate
    string description
    string type
  }
  KYC {
    ObjectId _id PK
    string userId
    string docType
    string docUrl
    string status
    string verifiedBy
    string type
  }
  STUDENT {
    ObjectId _id PK
    string userId
    string bio
    string location
    string website
    string subject
    string grade
  }
  COURSE ||--o{ TRAININGINSTITUTE : references
  EMPLOYER ||--o{ USER : references
  ENROLLMENT ||--o{ USER : references
  ENROLLMENT ||--o{ COURSE : references
  JOB ||--o{ USER : references
  MESSAGE ||--o{ USER : references
  NOTIFICATION ||--o{ USER : references
  SUBSCRIPTION ||--o{ USER : references
  SUBSCRIPTION ||--o{ SUBSCRIPTIONPLAN : references
  TRAININGINSTITUTE ||--o{ USER : references
  TRAININGINSTITUTE ||--o{ COURSE : references
  USER ||--o{ SUBSCRIPTION : references
  USERPREFERENCES ||--o{ USER : references
  KYC ||--o{ USER : references
  STUDENT ||--o{ USER : references
  STUDENT ||--o{ CERTIFICATION : references
  STUDENT ||--o{ KYC : references
  STUDENT ||--o{ EXPERIENCE : references

```
